Small fixes (#130)
* Fixes #90, Improved tag text color for arbitrary background colors

* Fixes #118, don't open preview window when no files are selected

* Fixes #116, show proper key combo for hotkeys in settings

* No x scrollbar in gallery, added thumbnail shape option (square/letterbox)

* Fixes #121 (Settings panel scroll height)

* Fix: Thumbnail shape should not affect slide view

* Fixed the fix for slide view

* Fix for empty directory check when changing thumbnail directory

* Fixes #133, missing thumbnails in preview overview
Needs master-css-update branch to work

* Selection refactor (#131)

* Extracted selection logic to separate hook, added better selection navigation in gallery

* Simplified nested ifs and improved navigation
* Improved naviation downwards (move to last image at the end)
* Simplified nested if statements in useSelectionCursor hook

* Remove unneccessary comment

--- a/src/renderer/resources/style/global.scss
+++ b/src/renderer/resources/style/global.scss
@@ -350,7 +350,7 @@ img {
 .bp3-overlay-content {
   display: flex;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
 }
 .drop-overlay-content {
   // top: 0;
